请求转发，与请求重定向案例添加

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,103 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>WebWay</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <description>学习servletConfig</description>
-    <display-name>TestServletConfig</display-name>
-    <servlet-name>TestServletConfig</servlet-name>
-    <servlet-class>learn.servlet.test.test.TestServletConfig</servlet-class>
-    <init-param>
-      <param-name>name</param-name>
-      <param-value>小欧表</param-value>
-    </init-param>
-    <init-param>
-      <param-name>mother</param-name>
-      <param-value>︿(￣︶￣)︿</param-value>
-    </init-param>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TestServletConfig</servlet-name>
-    <url-pattern>/TestServletConfig</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <display-name>TestServletStart1</display-name>
-    <servlet-name>TestServletStart1</servlet-name>
-    <servlet-class>learn.servlet.test.TestServletStart1</servlet-class>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TestServletStart1</servlet-name>
-    <url-pattern>/TestServletStart1</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <display-name>TestServletStart2</display-name>
-    <servlet-name>TestServletStart2</servlet-name>
-    <servlet-class>learn.servlet.test.TestServletStart02</servlet-class>
-    <load-on-startup>2</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TestServletStart2</servlet-name>
-    <url-pattern>/TestServletStart2</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <display-name>TestServletStart</display-name>
-    <servlet-name>TestServletStart</servlet-name>
-    <servlet-class>learn.servlet.test.TestServletStart</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TestServletStart</servlet-name>
-    <url-pattern>/TestServletStart</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>LoginServlet</display-name>
-    <servlet-name>LoginServlet</servlet-name>
-    <servlet-class>learn.config.LoginServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>LoginServlet</servlet-name>
-    <url-pattern>/LoginServlet</url-pattern>
-  </servlet-mapping>
-  <context-param>
-    <param-name>address</param-name>
-    <param-value>北京呢==================</param-value>
-  </context-param>
-  <servlet>
-    <description></description>
-    <display-name>TestServletContext</display-name>
-    <servlet-name>TestServletContext</servlet-name>
-    <servlet-class>learn.servlet.test.TestServletContext</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TestServletContext</servlet-name>
-    <url-pattern>/TestServletContext</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>TestRequest</display-name>
-    <servlet-name>TestRequest</servlet-name>
-    <servlet-class>learn.servlet.test.TestRequest</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>TestRequest</servlet-name>
-    <url-pattern>/TestRequest</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>downloadDemo</display-name>
-    <servlet-name>downloadDemo</servlet-name>
-    <servlet-class>learn.servlet.test.downloadDemo</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>downloadDemo</servlet-name>
-    <url-pattern>/downloadDemo</url-pattern>
-  </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
+	<display-name>WebWay</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<description>学习servletConfig</description>
+		<display-name>TestServletConfig</display-name>
+		<servlet-name>TestServletConfig</servlet-name>
+		<servlet-class>learn.servlet.test.test.TestServletConfig</servlet-class>
+		<init-param>
+			<param-name>name</param-name>
+			<param-value>小欧表</param-value>
+		</init-param>
+		<init-param>
+			<param-name>mother</param-name>
+			<param-value>︿(￣︶￣)︿</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestServletConfig</servlet-name>
+		<url-pattern>/TestServletConfig</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<display-name>TestServletStart1</display-name>
+		<servlet-name>TestServletStart1</servlet-name>
+		<servlet-class>learn.servlet.test.TestServletStart1</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestServletStart1</servlet-name>
+		<url-pattern>/TestServletStart1</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<display-name>TestServletStart2</display-name>
+		<servlet-name>TestServletStart2</servlet-name>
+		<servlet-class>learn.servlet.test.TestServletStart02</servlet-class>
+		<load-on-startup>2</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestServletStart2</servlet-name>
+		<url-pattern>/TestServletStart2</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<display-name>TestServletStart</display-name>
+		<servlet-name>TestServletStart</servlet-name>
+		<servlet-class>learn.servlet.test.TestServletStart</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestServletStart</servlet-name>
+		<url-pattern>/TestServletStart</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>LoginServlet</display-name>
+		<servlet-name>LoginServlet</servlet-name>
+		<servlet-class>learn.config.LoginServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginServlet</servlet-name>
+		<url-pattern>/LoginServlet</url-pattern>
+	</servlet-mapping>
+	<context-param>
+		<param-name>address</param-name>
+		<param-value>北京呢==================</param-value>
+	</context-param>
+	<servlet>
+		<description></description>
+		<display-name>TestServletContext</display-name>
+		<servlet-name>TestServletContext</servlet-name>
+		<servlet-class>learn.servlet.test.TestServletContext</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestServletContext</servlet-name>
+		<url-pattern>/TestServletContext</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>TestRequest</display-name>
+		<servlet-name>TestRequest</servlet-name>
+		<servlet-class>learn.servlet.test.TestRequest</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestRequest</servlet-name>
+		<url-pattern>/TestRequest</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>downloadDemo</display-name>
+		<servlet-name>downloadDemo</servlet-name>
+		<servlet-class>learn.servlet.test.downloadDemo</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>downloadDemo</servlet-name>
+		<url-pattern>/downloadDemo</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>TestCookie</display-name>
+		<servlet-name>TestCookie</servlet-name>
+		<servlet-class>learn.servlet.test.TestCookie</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestCookie</servlet-name>
+		<url-pattern>/TestCookie</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<description></description>
+		<display-name>TestRediction</display-name>
+		<servlet-name>TestRediction</servlet-name>
+		<servlet-class>learn.servlet.test.TestRediction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestRediction</servlet-name>
+		<url-pattern>/TestRediction</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<display-name>TestDispathcher</display-name>
+		<servlet-name>TestDispathcher</servlet-name>
+		<servlet-class>learn.servlet.test.TestRequsetDispatcher</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TestDispathcher</servlet-name>
+		<url-pattern>/TestDispathcher</url-pattern>
+	</servlet-mapping>
+
 </web-app>
