Finished:- StuManager select by name or gender , update, delete, insert
TODO: Paging, knowledge mind

shortcoming:
Lack experience of c3p0, jsp, jstl, el, jquery, now my every code can't
finish without api file. i need overcome this problems,


Think:I just looked down upon of this demo, the fact give a punch,it
told me that coding is as important as learning. by the way, don't
forget thinking,
Also, my knowlege is pool, just do it.

--- a/.classpath
+++ b/.classpath
@@ -24,6 +24,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-dbcp-1.4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-pool-1.5.6.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-dbutils-1.4.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-beanutils-1.8.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
